# fynder-email

./: .gitignore  LICENSE  default.nix  fynder-email.cabal  mass-mail.cabal  shell.nix
mailer/: Mailer.hs  Main.hs
src/Fynder/: Email.hs  Messaging.hs
templates/: email-container.tpl  space-available.tpl
test/: Tests.hs
