name: fynder-email
version: 1.0.0.0
synopsis: Send an email to all Fynder userss
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.8
data-files: templates/*.tpl

library
  hs-source-dirs: src
  exposed-modules:
    Fynder.Email
    Fynder.Messaging
  build-depends:
    aeson >= 0.6.1.0,
    amqp >= 0.3.3,
    base >= 4.5 && < 4.7,
    ghc-prim,
    mime-mail >= 0.4.1.2,
    optparse-applicative >= 0.5,
    text >= 0.11
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -Werror

executable fynder-emailer
  hs-source-dirs: mailer
  main-is: Main.hs
  build-depends:
    aeson >= 0.6.1.0,
    amqp >= 0.3.3,
    base >= 4.5 && < 4.7,
    blaze-builder >= 0.3,
    bytestring >= 0.10,
    errors >= 1.4.1,
    heist >= 0.11,
    HTTP >= 4000.2.8,
    mime-mail >= 0.4.1.2,
    fynder-email,
    mtl >= 0.3.0.0,
    network,
    network-metrics >= 0.3.1,
    optparse-applicative >= 0.5,
    text >= 0.11,
    time >= 1.4,
    transformers >= 0.2.2.0,
    xmlhtml >= 0.2.1
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -Werror

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
    test
    mailer
    enqueue
  build-depends:
    aeson >= 0.6.1.0,
    amqp >= 0.3.3,
    base >= 4.5 && < 4.7,
    blaze-builder >= 0.3,
    bytestring >= 0.9.2.1,
    configurator,
    errors >= 1.4.1,
    heist >= 0.11,
    HUnit >= 1.2,
    HTTP >= 4000.2.8,
    ghc-prim,
    mime-mail >= 0.4.1.2,
    mtl >= 0.3.0.0,
    fynder-email,
    postgresql-simple >= 0.2,
    smallcheck >= 1.0.1,
    stm,
    test-framework >= 0.8,
    test-framework-hunit >= 0.3,
    test-framework-smallcheck >= 0.1,
    text >= 0.11,
    time >= 1.4,
    transformers >= 0.2.2.0,
    xmlhtml >= 0.2.1
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -Werror
