name: fynder-email
version: 1.0.0.0
synopsis: Send an email to all Fynder userss
license: BSD3
license-file: LICENSE
author: Oliver Charles
maintainer: ollie@ocharles.org.uk
build-type: Simple
cabal-version: >=1.8
data-files: templates/*.tpl

library
  hs-source-dirs: src
  exposed-modules:
    Fynder.Email
    Fynder.Messaging
  build-depends:
    aeson >= 0.6.1.0,
    amqp >= 0.3.3,
    base >= 4.5 && < 4.8,
    fynder,
    ghc-prim,
    mime-mail >= 0.4.1.2,
    optparse-applicative >= 0.5,
    text >= 0.11
  ghc-options: -Wall -fno-warn-orphans -fwarn-tabs -funbox-strict-fields -O2 -Werror

executable fynder-emailer
  hs-source-dirs: mailer
  main-is: Main.hs
  build-depends:
    HTTP >= 4000.2.8,
    aeson >= 0.6.1.0,
    amqp >= 0.3.3,
    base >= 4.5 && < 4.8,
    blaze-builder >= 0.3,
    bytestring >= 0.10,
    errors >= 1.4.1,
    ex-pool,
    fynder,
    fynder-email,
    heist >= 0.11,
    lens,
    old-locale,
    mime-mail >= 0.4.1.2,
    mtl >= 0.3.0.0,
    network,
    network-metrics >= 0.3.1,
    optparse-applicative >= 0.5,
    postgresql-simple,
    text >= 0.11,
    time >= 1.4,
    transformers >= 0.2.2.0,
    unix,
    xmlhtml >= 0.2.1
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
               -Werror

